--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
+    "test": "mocha test/api.test.js --timeout 10000",
     "start": "node server.js"
   },
   "keywords": [],
@@ -22,7 +22,11 @@
     "multer": "^2.0.1"
   },
   "devDependencies": {
+    "chai": "^5.2.1",
+    "chai-http": "^5.1.2",
+    "esm": "^3.2.25",
     "jest": "^29.7.0",
+    "mocha": "^11.7.1",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.3"
   }
