--- a/backend/package.json
+++ b/backend/package.json
@@ -24,10 +24,7 @@
   "devDependencies": {
     "chai": "^5.2.1",
     "chai-http": "^5.1.2",
-    "esm": "^3.2.25",
-    "jest": "^29.7.0",
     "mocha": "^11.7.1",
-    "nodemon": "^3.1.10",
-    "supertest": "^7.1.3"
+    "nodemon": "^3.1.10"
   }
 }
